# small-agent

./: .gitignore  1  AGENTS.md  README.md  cli.py  config.json  harbor_config.py  pyproject.toml  runtime-errors.md  setup  setup.sh  test
agent_evolve/: README.md  RUN_AND_MONITOR.md  headless_inner_loop_prompt.md  run_outer_loop.py  test_scoreboard.py
agent_evolve_v2/: README.md  __init__.py  benchmark.py  config.py  critic.py  headless_inner_loop_prompt.md  refresh_start_workdirs.py  run_outer_loop.py  runs.json  runtime.py  service_cli.py  service_remote_runner.py  service_runtime.py  state.py  state_manager.py
agent_evolve_v3/: README.md  benchmark.py  benchmark_summary.py  config.py  dashboard.py  headless_implementation_prompt.md  headless_planning_prompt.md  planner_context.py  refresh_start_workdirs.py  run_outer_loop.py  runs.json  runtime.py  service_cli.py  service_remote_runner.py  service_runtime.py  state.py  state_manager.py
agent_evolve_v3/workspace_support/: benchmark.py  benchmark_summary.py  pyproject.toml  run_task.py  validate_workspace.py  workspace_agent_types.py  workspace_config.py  workspace_harbor_agent.py
agent_evolve_v3/workspace_support/tests/: test_workspace_contract.py  test_workspace_runtime.py
agents/: __init__.py  interface.py  local_binary.py  registry.py
cli/: PLAN_claude_openrouter_openai.md  PLAN_opencode_openrouter_openai.md  PLAN_qwen_openrouter_openai.md  README.md  clean  cli.py  config.json  core_agent.py  pyproject.toml  run  setup  test
cli/agent_evolve/: README.md  __init__.py  headless_inner_loop_prompt.md  run_outer_loop.py
cli/agent_evolve/start_workdir/: .gitignore  NOTES.md  README.md  agent.py  run_recorded_benchmark.py  test_interface_contract.py
cli/agents/: interface.py  local_binary.py  openai_compat.py  registry.py
cli/agents/claude/: __init__.py  claude_agent.py
cli/agents/core/: environment.py  events.py
cli/agents/headless/: __init__.py  codex_agent.py  qwen_agent.py
cli/agents/opencode/: __init__.py  opencode_agent.py  util.py
cli/agents/qwen/: qwen_agent.py  util.py
cli/agents/terminus2/: __init__.py  agent.py  core.py  core_agent.py  final_summary.py
cli/agents/toolmind_harness/: README.md  __init__.py  agent.py  alignment_eval.py  alignment_report_full.md  config.json  harness.py
cli/benchmark/: README.md  __init__.py  __main__.py  adapters.py  areal_adapter.py  harbor_bridge.py  run_batch.py  runtime_config.py  terminalbench_common.py  terminalbench_harbor_adapter.py  terminalbench_tb_adapter.py
cli/benchmark/examples/: README.md  common.sh  run_full.sh  run_smoke.sh  run_tiny.sh
cli/harbor/: agent.py  common.sh  run_debug.sh  run_easy_benchmark.sh  run_eval.sh  run_full.sh  run_small.sh  run_smoke.sh
cli/tests/: test_agents_audit.py  test_benchmark_contracts.py  test_harbor_bridge.py  test_harbor_external.py  test_harbor_scripts.py  test_headless_live.py  test_main.py  test_outer_loop.py  test_recorded_benchmark.py  test_run_batch.py  test_tb_smoke_optional.py
cli/toolmind_harness/: README.md  alignment_eval.py  alignment_report_static.md  reverse_engineering_notes.md
data/: README.md  __init__.py
harbor/: BENCHMARK_REPORT_2026-03-12.md  LONG_CONTEXT_EXPERIMENT.md  agent.py  analyze_long_context_experiment.py  clean_docker.sh  common.sh  monitor_long_experiment.sh  pull_mteb.sh  run_benchmark_125k_to_500k.sh  run_benchmark_under_125k.sh  run_context_experiment.sh  run_debug.sh  run_dev_benchmark.sh  run_full_benchmark.sh  run_long_benchmark.sh  run_long_context_experiment.sh  run_small_benchmark.sh  run_smoke.sh
plans/: 2026-03-12-terminus2-web-view-v1.md
qwen3_5_sft/: pyproject.toml  train.py  train.sh
scripts/: train_locooperator_balanced_65k_b200.sbatch  train_locooperator_demo_65k.sbatch  train_locooperator_full_65k_b200.sbatch
sft/: README.md  pyproject.toml  swift_sft_entry.py
sft-scripts/: megatron_export.sbatch  train.sbatch  train_balanced_32k_b200_tp2_2node.sbatch
tests/: test_agent_evolve_v2.py  test_agents_audit.py  (+8 more)
(+199 files in other folders)
