[project]
name = "test-cli"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.135.1",
    "httpx",
    "litellm>=1.82.4",
    "openai",
    "pytest>=9.0.2",
    "rich",
    "tenacity>=9.1.4",
    "truststore",
    "uvicorn>=0.42.0",
]

[project.scripts]
terminus2-cli = "cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["agents"]
include = ["cli.py", "harbor_config.py", "agents/"]

[tool.ruff]
cache-dir = ".local/cache/ruff"
extend-exclude = ["*.json"]
force-exclude = true

[tool.pytest.ini_options]
testpaths = ["tests"]
cache_dir = ".local/cache/pytest"
markers = [
    "requires_api_key: tests that require live API credentials",
]

[tool.mypy]
cache_dir = ".local/cache/mypy"

[dependency-groups]
dev = []
