[project]
name = "test-cli"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "litellm",
    "pexpect",
    "pytest>=9.0.2",
    "rich",
    "truststore",
]

[project.scripts]
terminus2-cli = "cli:main"
small-agent-benchmark = "benchmark.run_batch:main"

[tool.ruff]
cache-dir = ".local/cache/ruff"

[tool.pytest.ini_options]
cache_dir = ".local/cache/pytest"

[tool.mypy]
cache_dir = ".local/cache/mypy"
