[project]
name = "agent-evolve-v3-workspace"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "anthropic",
    "httpx",
    "openai",
    "pytest>=9.0.2",
    "rich",
    "truststore",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["{support_package}"]
include = [
    "agents/agent.py",
    "benchmark.py",
    "benchmark_summary.py",
    "run_task.py",
    "state_types.py",
    "tests/",
    "validate_workspace.py",
    "workspace_agent_types.py",
    "workspace_config.py",
    "workspace_harbor_agent.py",
    "{support_package}/",
]
